[gd_scene load_steps=2 format=3 uid="uid://jp4vr5jimcmp"]

[ext_resource type="Script" path="res://scenes/menu_UI/pause_menu/pause_menu.gd" id="1_q0sp8"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q0sp8")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Game Paused"

[node name="spacer" type="Control" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Continue" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Continue"

[node name="MainMenu" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Main Menu"

[node name="Quit" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/Continue" to="." method="continue_game"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/MainMenu" to="." method="return_to_main_menu"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/Quit" to="." method="quit_game"]
